--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 # Edit next line to provide your own name.
 title: Anh Minh Nguyen | Professional Portfolio
 # Edit next line, replacing 'techfolios' with your github username
-url: "https://anhminhnguyen.github.io"
+url: "hhttps://anhminhnguyen2.github.io/"
 # Edit next line so that baseurl is "" if your repo is <username>.github.io
 baseurl: " "
 
